--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
     "angular-mocks": "~1.2.1",
     "requirejs": "~2.1.9",
     "requirejs-text": "~2.0.10",
-    "html5-boilerplate": "~4.3.0"
+    "html5-boilerplate": "~4.3.0",
+    "normalize-css": "~3.0.1",
+    "reset-css": "latest"
   }
 }
